--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -31,8 +31,8 @@ jobs:
         run: sh autogen.sh
       - name: autogen 
         run: ./configure --disable-tests \
-            BDB_LIBS="-L${BDB_PREFIX}/lib -ldb_cxx-4.8" \
-            BDB_CFLAGS="-I${BDB_PREFIX}/include"
+            "BDB_LIBS"="-L${BDB_PREFIX}/lib -ldb_cxx-4.8" \
+            "BDB_CFLAGS"="-I${BDB_PREFIX}/include"
       - name: make
         run: make -j4
         
