--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -355,6 +355,7 @@ libnyancoin_util_a_SOURCES = \
 
 if GLIBC_BACK_COMPAT
 libnyancoin_util_a_SOURCES += compat/glibc_compat.cpp
+AM_LDFLAGS += $(COMPAT_LDFLAGS)
 endif
 
 # cli: shared between bitcoin-cli and bitcoin-qt
