--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -7,92 +7,92 @@ EXTRA_LIBRARIES += qt/libnyancoinqt.a
 
 # bitcoin qt core #
 QT_TS = \
-  qt/locale/bitcoin_af.ts \
-  qt/locale/bitcoin_af_ZA.ts \
-  qt/locale/bitcoin_ar.ts \
-  qt/locale/bitcoin_be_BY.ts \
-  qt/locale/bitcoin_bg_BG.ts \
-  qt/locale/bitcoin_bg.ts \
-  qt/locale/bitcoin_ca_ES.ts \
-  qt/locale/bitcoin_ca.ts \
-  qt/locale/bitcoin_ca@valencia.ts \
-  qt/locale/bitcoin_cs.ts \
-  qt/locale/bitcoin_cy.ts \
-  qt/locale/bitcoin_da.ts \
-  qt/locale/bitcoin_de.ts \
-  qt/locale/bitcoin_el_GR.ts \
-  qt/locale/bitcoin_el.ts \
-  qt/locale/bitcoin_en_GB.ts \
-  qt/locale/bitcoin_en.ts \
-  qt/locale/bitcoin_eo.ts \
-  qt/locale/bitcoin_es_AR.ts \
-  qt/locale/bitcoin_es_CL.ts \
-  qt/locale/bitcoin_es_CO.ts \
-  qt/locale/bitcoin_es_DO.ts \
-  qt/locale/bitcoin_es_ES.ts \
-  qt/locale/bitcoin_es_MX.ts \
-  qt/locale/bitcoin_es.ts \
-  qt/locale/bitcoin_es_UY.ts \
-  qt/locale/bitcoin_es_VE.ts \
-  qt/locale/bitcoin_et_EE.ts \
-  qt/locale/bitcoin_et.ts \
-  qt/locale/bitcoin_eu_ES.ts \
-  qt/locale/bitcoin_fa_IR.ts \
-  qt/locale/bitcoin_fa.ts \
-  qt/locale/bitcoin_fi.ts \
-  qt/locale/bitcoin_fr_CA.ts \
-  qt/locale/bitcoin_fr_FR.ts \
-  qt/locale/bitcoin_fr.ts \
-  qt/locale/bitcoin_gl.ts \
-  qt/locale/bitcoin_he.ts \
-  qt/locale/bitcoin_hi_IN.ts \
-  qt/locale/bitcoin_hr.ts \
-  qt/locale/bitcoin_hu.ts \
-  qt/locale/bitcoin_id_ID.ts \
-  qt/locale/bitcoin_it_IT.ts \
-  qt/locale/bitcoin_it.ts \
-  qt/locale/bitcoin_ja.ts \
-  qt/locale/bitcoin_ka.ts \
-  qt/locale/bitcoin_kk_KZ.ts \
-  qt/locale/bitcoin_ko_KR.ts \
-  qt/locale/bitcoin_ku_IQ.ts \
-  qt/locale/bitcoin_ky.ts \
-  qt/locale/bitcoin_la.ts \
-  qt/locale/bitcoin_lt.ts \
-  qt/locale/bitcoin_lv_LV.ts \
-  qt/locale/bitcoin_mk_MK.ts \
-  qt/locale/bitcoin_mn.ts \
-  qt/locale/bitcoin_ms_MY.ts \
-  qt/locale/bitcoin_nb.ts \
-  qt/locale/bitcoin_ne.ts \
-  qt/locale/bitcoin_nl.ts \
-  qt/locale/bitcoin_pam.ts \
-  qt/locale/bitcoin_pl.ts \
-  qt/locale/bitcoin_pt_BR.ts \
-  qt/locale/bitcoin_pt_PT.ts \
-  qt/locale/bitcoin_ro_RO.ts \
-  qt/locale/bitcoin_ro.ts \
-  qt/locale/bitcoin_ru_RU.ts \
-  qt/locale/bitcoin_ru.ts \
-  qt/locale/bitcoin_sk.ts \
-  qt/locale/bitcoin_sl_SI.ts \
-  qt/locale/bitcoin_sq.ts \
-  qt/locale/bitcoin_sr@latin.ts \
-  qt/locale/bitcoin_sr.ts \
-  qt/locale/bitcoin_sv.ts \
-  qt/locale/bitcoin_ta.ts \
-  qt/locale/bitcoin_th_TH.ts \
-  qt/locale/bitcoin_tr_TR.ts \
-  qt/locale/bitcoin_tr.ts \
-  qt/locale/bitcoin_uk.ts \
-  qt/locale/bitcoin_ur_PK.ts \
-  qt/locale/bitcoin_uz@Cyrl.ts \
-  qt/locale/bitcoin_vi.ts \
-  qt/locale/bitcoin_vi_VN.ts \
-  qt/locale/bitcoin_zh_CN.ts \
-  qt/locale/bitcoin_zh_HK.ts \
-  qt/locale/bitcoin_zh.ts \
-  qt/locale/bitcoin_zh_TW.ts
+  qt/locale/nyancoin_af.ts \
+  qt/locale/nyancoin_af_ZA.ts \
+  qt/locale/nyancoin_ar.ts \
+  qt/locale/nyancoin_be_BY.ts \
+  qt/locale/nyancoin_bg_BG.ts \
+  qt/locale/nyancoin_bg.ts \
+  qt/locale/nyancoin_ca_ES.ts \
+  qt/locale/nyancoin_ca.ts \
+  qt/locale/nyancoin_ca@valencia.ts \
+  qt/locale/nyancoin_cs.ts \
+  qt/locale/nyancoin_cy.ts \
+  qt/locale/nyancoin_da.ts \
+  qt/locale/nyancoin_de.ts \
+  qt/locale/nyancoin_el_GR.ts \
+  qt/locale/nyancoin_el.ts \
+  qt/locale/nyancoin_en_GB.ts \
+  qt/locale/nyancoin_en.ts \
+  qt/locale/nyancoin_eo.ts \
+  qt/locale/nyancoin_es_AR.ts \
+  qt/locale/nyancoin_es_CL.ts \
+  qt/locale/nyancoin_es_CO.ts \
+  qt/locale/nyancoin_es_DO.ts \
+  qt/locale/nyancoin_es_ES.ts \
+  qt/locale/nyancoin_es_MX.ts \
+  qt/locale/nyancoin_es.ts \
+  qt/locale/nyancoin_es_UY.ts \
+  qt/locale/nyancoin_es_VE.ts \
+  qt/locale/nyancoin_et_EE.ts \
+  qt/locale/nyancoin_et.ts \
+  qt/locale/nyancoin_eu_ES.ts \
+  qt/locale/nyancoin_fa_IR.ts \
+  qt/locale/nyancoin_fa.ts \
+  qt/locale/nyancoin_fi.ts \
+  qt/locale/nyancoin_fr_CA.ts \
+  qt/locale/nyancoin_fr_FR.ts \
+  qt/locale/nyancoin_fr.ts \
+  qt/locale/nyancoin_gl.ts \
+  qt/locale/nyancoin_he.ts \
+  qt/locale/nyancoin_hi_IN.ts \
+  qt/locale/nyancoin_hr.ts \
+  qt/locale/nyancoin_hu.ts \
+  qt/locale/nyancoin_id_ID.ts \
+  qt/locale/nyancoin_it_IT.ts \
+  qt/locale/nyancoin_it.ts \
+  qt/locale/nyancoin_ja.ts \
+  qt/locale/nyancoin_ka.ts \
+  qt/locale/nyancoin_kk_KZ.ts \
+  qt/locale/nyancoin_ko_KR.ts \
+  qt/locale/nyancoin_ku_IQ.ts \
+  qt/locale/nyancoin_ky.ts \
+  qt/locale/nyancoin_la.ts \
+  qt/locale/nyancoin_lt.ts \
+  qt/locale/nyancoin_lv_LV.ts \
+  qt/locale/nyancoin_mk_MK.ts \
+  qt/locale/nyancoin_mn.ts \
+  qt/locale/nyancoin_ms_MY.ts \
+  qt/locale/nyancoin_nb.ts \
+  qt/locale/nyancoin_ne.ts \
+  qt/locale/nyancoin_nl.ts \
+  qt/locale/nyancoin_pam.ts \
+  qt/locale/nyancoin_pl.ts \
+  qt/locale/nyancoin_pt_BR.ts \
+  qt/locale/nyancoin_pt_PT.ts \
+  qt/locale/nyancoin_ro_RO.ts \
+  qt/locale/nyancoin_ro.ts \
+  qt/locale/nyancoin_ru_RU.ts \
+  qt/locale/nyancoin_ru.ts \
+  qt/locale/nyancoin_sk.ts \
+  qt/locale/nyancoin_sl_SI.ts \
+  qt/locale/nyancoin_sq.ts \
+  qt/locale/nyancoin_sr@latin.ts \
+  qt/locale/nyancoin_sr.ts \
+  qt/locale/nyancoin_sv.ts \
+  qt/locale/nyancoin_ta.ts \
+  qt/locale/nyancoin_th_TH.ts \
+  qt/locale/nyancoin_tr_TR.ts \
+  qt/locale/nyancoin_tr.ts \
+  qt/locale/nyancoin_uk.ts \
+  qt/locale/nyancoin_ur_PK.ts \
+  qt/locale/nyancoin_uz@Cyrl.ts \
+  qt/locale/nyancoin_vi.ts \
+  qt/locale/nyancoin_vi_VN.ts \
+  qt/locale/nyancoin_zh_CN.ts \
+  qt/locale/nyancoin_zh_HK.ts \
+  qt/locale/nyancoin_zh.ts \
+  qt/locale/nyancoin_zh_TW.ts
 
 QT_FORMS_UI = \
   qt/forms/addressbookpage.ui \
@@ -437,7 +437,7 @@ $(srcdir)/qt/bitcoinstrings.cpp: $(libbitcoin_server_a_SOURCES) $(libbitcoin_wal
 
 translate: $(srcdir)/qt/bitcoinstrings.cpp $(QT_FORMS_UI) $(QT_FORMS_UI) $(BITCOIN_QT_BASE_CPP) qt/bitcoin.cpp $(BITCOIN_QT_WINDOWS_CPP) $(BITCOIN_QT_WALLET_CPP) $(BITCOIN_QT_H) $(BITCOIN_MM)
 	@test -n $(LUPDATE) || echo "lupdate is required for updating translations"
-	$(AM_V_GEN) QT_SELECT=$(QT_SELECT) $(LUPDATE) $^ -locations relative -no-obsolete -ts $(srcdir)/qt/locale/bitcoin_en.ts
+	$(AM_V_GEN) QT_SELECT=$(QT_SELECT) $(LUPDATE) $^ -locations relative -no-obsolete -ts $(srcdir)/qt/locale/nyancoin_en.ts
 
 $(QT_QRC_LOCALE_CPP): $(QT_QRC_LOCALE) $(QT_QM)
 	@test -f $(RCC)
