Slight polish to sample .conf file, under construction

--- a/contrib/debian/examples/nyancoin.conf
+++ b/contrib/debian/examples/nyancoin.conf
@@ -1,7 +1,14 @@
 ##
 ## nyancoin.conf configuration file. Lines beginning with # are comments.
 ##
- 
+
+#YOU MUST SET A USER PASS TO USE RPC FUNCTIONS!
+rpcuser=<YOUR USERNAME>
+rpcpassword=<YOUR PASSWORD> 
+
+#Uncomment this line if you are running a service that needs to index the blockchain, such as electrumx
+#txindex=1
+
 # Network-related settings:
 
 # Run on the test network instead of the real nyancoin network.
